# vibeconomics

./: .gitignore  .pre-commit-config.yaml  README.md  deployment.md  docker-compose.storybook.yml  docker-compose.yml  scaffold-project.sh
backend/: .pyre_configuration  Dockerfile  README.md  alembic.ini  clean.ps1  conftest.py  debug_template.py  mypy.ini  pyproject.toml
backend/.pyre/: pyre.stderr
backend/scripts/: lint.sh  prestart.sh  test.sh  tests-start.sh
backend/src/: setup.py
backend/src/app/: backend_pre_start.py  config.py  crud.py  initial_data.py  main.py  utils.py
backend/src/app/adapters/: __init__.py  a2a_client_adapter.py  activepieces_adapter.py  conversation_repository_inmemory.py  conversation_repository_sqlmodel.py  fake_unit_of_work.py  mem0_adapter.py  message_bus_inmemory.py  message_bus_redis.py  nlweb_adapter.py  orm.py  rabbitmq_config.py  (+3 more)
backend/tests/: conftest.py
backend/tests/adapters/: test_a2a_client_adapter.py  test_conversation_repository_inmemory.py  test_mem0_adapter.py  test_rabbitmq_config.py  test_rabbitmq_message_bus.py
backend/tests/crud/: test_user.py
backend/tests/domain/: test_core_models.py
backend/tests/e2e/: test_e2e_a2a_handling.py  test_e2e_chat.py  test_e2e_nlweb_mcp.py  test_e2e_pattern_workflows.py  test_e2e_workflows.py
backend/tests/entrypoints/: __init__.py
backend/tests/patterns/: test_example_patterns.py
backend/tests/scripts/: test_test_pre_start.py  tests_pre_start.py
backend/tests/service_layer/: __init__.py  test_a2a_service.py  test_abstractions.py  test_ai_pattern_execution_service.py  test_ai_provider_service.py  test_context_service.py  test_conversation_repository.py  test_fabric_patterns.py  test_llm_services.py  test_message_bus.py  test_pattern_service.py  test_strategy_service.py  test_template_extensions.py  test_template_service.py  test_template_service_extensions.py  test_unit_of_work.py
backend/tests/utils/: item.py  user.py
(+144 files in other folders)
